Add to .gitignore and made a copy in repo

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,15 @@
 
 # Log files #
 #############
-*.pyc
 
-# Folders #
+
+# Byte-compiled #
+################
+__pycache__
+*.pyc
 
 # venv #
 ########
 .env
+.venv
+venv/
