--- a/automate-the-boring-stuff-python/.gitignore
+++ b/automate-the-boring-stuff-python/.gitignore
@@ -4,11 +4,15 @@
 
 # Log files #
 #############
-*.pyc
 
-# Folders #
-###########
+
+# Byte-compiled #
+################
+__pycache__
+*.pyc
 
 # venv #
 ########
 .env
+.venv
+venv/
